# PerceptronProjekt

./: CMakeLists.txt  main.cpp
Perceptron/: NetLayer.cpp  NetLayer.h  Neuron.cpp  Neuron.h  Perceptron.cpp  Perceptron.h  PerceptronSettings.h
Perceptron/Implement/: McCullochPitts_Neuron.cpp  McCullochPitts_Neuron.h
strings/: StringExt.cpp  StringExt.h
